# Data-Analisys-Technologies-In-Internet

./: regex.py
LR-1/: regex.py
LR-2/: LoadPhotos.py  gameofthrones.html  net.csv  vkanalysis.py
LR-2/romans-example/: README.md  VKApiExample.ipynb  VKGrpoups.ipynb  pyproject.toml  scheme.py  vk_api.py  vk_requests.py
LR-3/: main.py
LR-4/: robot.py
