[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Samoed <samoed.roman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
tqdm = "^4.64.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
